--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,3 +82,19 @@ jobs:
           github_token: ${{ secrets.TOKEN_ALLURE }}
           publish_branch: gh-pages
           publish_dir: ./allure-report
+
+      - name: Notify Telegram
+        if: always()
+        run: |
+          STATUS=${{ job.status }}
+          MESSAGE="🧪 *Playwright Tests завершены*%0A\
+          Статус: *$STATUS*%0A\
+          ✅ Пройдено: *$PASSED*%0A\
+          ❌ Упало: *$FAILED*%0A\
+          ⚠️ Пропущено: *$SKIPPED*%0A\
+          📊 Всего: *$TOTAL*%0A\
+            🔗 [Открыть Allure Report](https://4ddy1.github.io/qaguru_diploma/)"
+            curl -s -X POST https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage \
+            -d chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
+            -d parse_mode=Markdown \
+            -d text="$MESSAGE"
