--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,7 +93,7 @@ jobs:
           ❌ Упало: *$FAILED*%0A\
           ⚠️ Пропущено: *$SKIPPED*%0A\
           📊 Всего: *$TOTAL*%0A\
-            🔗 [Открыть Allure Report](https://4ddy1.github.io/qaguru_diploma/)"
+            🔗 [Открыть Allure Report](https://vrn4k.github.io/qa.guru_diploma/)"
             curl -s -X POST https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage \
             -d chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
             -d parse_mode=Markdown \
