--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,61 +1,47 @@
-# название workflow
-name: QA.GURU diploma workflow
-
+name: Playwright Tests
 on:
-  # стандартный запуск
+  workflow_dispatch:
   push:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
-  # ручной запуск
-  workflow_dispatch:
-
 permissions:
-  contents: write
-  pages:   write
-
+  contents: write  # Нужно для деплоя в gh-pages
 jobs:
   test:
+    timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
-      # Получаем код
       - uses: actions/checkout@v4
-
-        # Устанавливаем Node.js
       - uses: actions/setup-node@v4
         with:
           node-version: lts/*
-
-        # Устанавливаем зависимости
       - name: Install dependencies
         run: npm ci
-
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
-
-        # Запускаем тесты
       - name: Run Playwright tests
         run: npx playwright test
 
-        # Сохраняем отчет Playwright
+        # сохраняем отчет pw
       - uses: actions/upload-artifact@v4
         if: always()
         continue-on-error: true
         with:
           name: test-results
           path: test-results
-          retention-days: 30
+          retention-days: 20
 
-        # Сохраняем отчет Allure
+      # сохраняем отчет allure
       - uses: actions/upload-artifact@v4
         if: always()
         continue-on-error: true
         with:
           name: allure-results
           path: allure-results
-          retention-days: 30
+          retention-days: 20
 
-        # Забираем результаты предыдущего запуска
+      # забираем результаты предыдущего запуска отчета allure
       - uses: actions/checkout@v4
         if: always()
         continue-on-error: true
@@ -63,25 +49,24 @@ jobs:
           ref: gh-pages
           path: gh-pages
 
-        # Создаем Allure отчёт
-      - uses: simple-elf/allure-report-action@master
+      - name: Generate Allure Report
         if: always()
+        uses: simple-elf/allure-report-action@master
         id: allure-report
         with:
           allure_results: allure-results
-          gh_pages: gh-pages
           allure_report: allure-report
           allure_history: allure-history
-          keep_reports: 30
+          keep_reports: 20
 
-        # Деплоим отчет
-      - name: Deploy report
+        # Формируем из allure-results отчет allure-report
+      - name: Deploy report to GitHub Pages
         if: always()
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: allure-history
           publish_branch: gh-pages
-          publish_dir: ./allure-report
 
       - name: Notify Telegram
         if: always()
